fix(theme): update scrollbar width to 8px

--- a/packages/theme/src/base/basic-var.less
+++ b/packages/theme/src/base/basic-var.less
@@ -490,8 +490,8 @@
   --ti-common-size-height-mini: var(--ti-common-size-6x); // NewCssVar
 
   /*  滚动条 */
-  --ti-common-scrollbar-width: 4px;
-  --ti-common-scrollbar-height: 4px;
+  --ti-common-scrollbar-width: 8px;
+  --ti-common-scrollbar-height: 8px;
   --ti-common-scrollbar-track-piece-bg-color: var(--ti-base-color-bg-4);
   --ti-common-scrollbar-thumb-bg-color: #bfbfbf;
   --ti-common-scrollbar-thumb-border-radius: 6px;
