--- a/packages/theme/src/guide/vars.less
+++ b/packages/theme/src/guide/vars.less
@@ -54,9 +54,9 @@
   // 引导框内容滚动wrap左内边距
   --ti-guide-text-scrollbox-padding-right: var(--ti-common-space-2x, 8px);
   // 引导框内容滚动条宽度
-  --ti-guide-text-scrollbar-width: var(--ti-common-scrollbar-width, 4px);
+  --ti-guide-text-scrollbar-width: var(--ti-common-scrollbar-width, 8px);
   // 引导框内容滚动条高度
-  --ti-guide-text-scrollbar-height: var(--ti-common-scrollbar-height, 4px);
+  --ti-guide-text-scrollbar-height: var(--ti-common-scrollbar-height, 8px);
   // 引导框内容滚动条圆角
   --ti-guide-text-scrollbar-border-radius: var(--ti-common-scrollbar-thumb-border-radius, 6px);
   // 引导框内容滚动条边框色
